objects/Covid_Case_Rental_Assistan__mdt.object
<CustomObject>
    <fields>
        <fullName>Batch_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Covid Case Rental Assistance Period</label>
    <pluralLabel>Covid Case Rental Assistance Period</pluralLabel>
</CustomObject>